--- a/TeduShop.Web/Views/Admin/Index.cshtml
+++ b/TeduShop.Web/Views/Admin/Index.cshtml
@@ -13,6 +13,7 @@
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Theme style -->
+    <link href="~/content/toastr.css" rel="stylesheet" />
     <link rel="stylesheet" href="/Assets/admin/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
@@ -539,11 +540,13 @@
     <!--Library-->
     <script src="~/Scripts/angular.js"></script>
     <script src="~/Scripts/angular-ui-router.js"></script>
+    <script src="~/Scripts/toastr.js"></script>
     <!--Common-->
     <script src="~/app/shared/modules/tedushop.common.js"></script>
     <script src="~/app/shared/services/apiService.js"></script>
     <script src="~/app/shared/filter/statusFilter.js"></script>
     <script src="~/app/shared/directives/pagerDirective.js"></script>
+    <script src="~/app/shared/services/notificationService.js"></script>
     <!--module-->
     <script src="~/app/components/products/products.module.js"></script>
     <script src="~/app/components/product_categories/productCategories.module.js"></script>
