--- a/TeduShop.Web/app/components/product_categories/productCategoryListView.html
+++ b/TeduShop.Web/app/components/product_categories/productCategoryListView.html
@@ -56,8 +56,7 @@
                         </tr>
                         <tfoot>
                             <tr>
-                                <td colspan="5">
-                                    Tổng số bản ghi: {{totalCount}}
+                                <td colspan="5"><span class="pull-right">Trang: {{page+1}} - Tổng số bản ghi: {{totalCount}}</span>                                    
                                 </td>
                             </tr>
                         </tfoot>
